--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "untitled2"
+name = "Kobold_Background"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,3 +9,4 @@ edition = "2021"
 serde = { version = "1.0.197", features = ["derive"] }
 reqwest = { version = "0.12.3", features = ["json"] }
 tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
+serde_json = "1.0.115"
