--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0.197", features = ["derive"] }
-reqwest = { version = "0.12.3", features = ["json"] }
+reqwest = { version = "0.12.3", features = ["json", "blocking"] }
 tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
 serde_json = "1.0.115"
 time = "0.3.36"
+wallpaper-windows-user32 = "0.4.0"
