--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
 serde_json = "1.0.115"
 time = "0.3.36"
 wallpaper-windows-user32 = "0.4.0"
+anyhow = "1.0.82"
